Add controllers and views

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-action">
-    <%= t('controllers.admin/users.index.title') %>
+    <%= t('activerecord.models.user.other') %>
   </div>
   <div class="card-content">
     <%= paginate @users %>
