--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-action">
-    <%= t('controllers.admin/users.edit.title') %>
+    <%= t('activerecord.models.user.one') %>
   </div>
   <div class="card-content">
     <%= render 'devise/shared/error_messages', resource: @user %>
